tests/diagnostics/statements/control_flow/unreachable_after_return/expect.txt
# exit: 1
input/main.lang0:3:5: error: unreachable code
      return 2
      ^
